try to add earth but not work yet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <body>
     <script src="src/three.min.js"></script>
+    <script src="src/OrbitControls.js"></script>
+    <script src="src/GLTFLoader.js"></script>
     <script src="src/starspace.js"></script>
   </body>
 </html>
