convert spaceship.js in class

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset=UTF-8/>
     <link rel="stylesheet" type="text/css" href="style/style.css" />
+</script>
 
   </head>
 
@@ -10,6 +11,5 @@
     <script src="src/three.min.js"></script>
     <script src="src/GLTFLoader.js"></script>
     <script src="src/starspace.js"></script>
-
   </body>
 </html>
