--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   </head>
 
   <body>
-    <script src="src/three.min.js"></script>
-    <script src="src/GLTFLoader.js"></script>
-    <script src="src/starspace.js"></script>
+    <script type="module" src="src/starspace.js"></script>
   </body>
 </html>
