--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <meta charset=UTF-8/>
+    <title>Earth Defender</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="public/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="public/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="public/icon/favicon-16x16.png">
+    <link rel="manifest" href="public/icon/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="style/style.css" />
 </script>
 
