--- a/src/game.html
+++ b/src/game.html
@@ -30,5 +30,6 @@
     <!--<h1>Space Invaders</h1>-->
     <canvas id="game"></canvas>
     <script type="module" src="game.js"></script>
+    <!--<script type="module" src="../src/starspace.js"></script>-->
   </body>
 </html>
