--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   </head>
 
   <body>
-    <script type="module" src="src/starspace.js"></script>
+    <script type="module" src="src/StarSpace.js"></script>
   </body>
 </html>
