--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 </script>
 
   </head>
-
   <body>
+    <main>
+      <div id="container3D"></div>
+    </main>
     <script type="module" src="src/StarSpace.js"></script>
+    <script type="module" src="src/ThreeJsObject.js"></script>
   </body>
 </html>
