--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="container3D"></div>
 
-    <script type="module" src="src/StarSpace.js"></script>
+    <script type="module" src="src/Starspace.js"></script>
     <script type="module" src="src/ThreeJsObject.js"></script>
   </body>
 </html>
