fix file and comment EarthLoaders

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   </head>
   <body>
     <div id="container3D"></div>
+    <div id="space_ship_container"></div>
 
     <script type="module" src="src/Starspace.js"></script>
-    <script type="module" src="src/ThreeJsObject.js"></script>
+    <script type="module" src="src/EarthLoader.js"></script>
   </body>
 </html>
