add audio in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <body>
     <div id="container3D"></div>
     <div id="space_ship_container"></div>
-
+    <audio autoplay loop muted> //per far funzionare l'audio rimuovi muted
+      <source src="public/assets/sounds/Dreamcatcher.mp3" type="audio/mp3">
+    </audio>
     <script type="module" src="src/Starspace.js"></script>
     <script type="module" src="src/EarthLoader.js"></script>
   </body>
