--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
 
   </head>
   <body>
-    <div id="container3D"></div>
-    <div id="space_ship_container"></div>
     <audio autoplay loop muted> //per far funzionare l'audio rimuovi muted
       <source src="public/assets/sounds/Dreamcatcher.mp3" type="audio/mp3">
     </audio>
+    
+
     <script type="module" src="src/Starspace.js"></script>
-    <script type="module" src="src/EarthLoader.js"></script>
+    
+    <div id="container3D">
+      <script type="module" src="src/EarthLoader.js"></script>
+    </div>
+
+    <!-- <div id="spaceShipContainer">
+      <script type="module" src="src/SpaceShipLoader.js"></script>
+    </div> -->
+
   </body>
 </html>
