--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div id="container3D">
       <script type="module" src="src/EarthLoader.js"></script>
     </div>
-
-    <!-- <div id="spaceShipContainer">
+<!-- 
+    <div id="spaceShipContainer">
       <script type="module" src="src/SpaceShipLoader.js"></script>
     </div> -->
 
