add spaceship in the scene, now works correctly

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div id="container3D">
       <script type="module" src="src/EarthLoader.js"></script>
     </div>
-<!-- 
+
     <div id="spaceShipContainer">
       <script type="module" src="src/SpaceShipLoader.js"></script>
-    </div> -->
+    </div>
 
   </body>
 </html>
