--- a/index.html
+++ b/index.html
@@ -8,10 +8,27 @@
     <link rel="icon" type="image/png" sizes="16x16" href="public/icon/favicon-16x16.png">
     <link rel="manifest" href="public/icon/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="style/style.css" />
+    <link rel="stylesheet" type="text/css" href="style/navbar_style.css" />
 </script>
 
   </head>
   <body>
+
+    <a href="index.html" class="logo" target="_blank">
+      <img src="public/assets/images/logo.svg" alt="">
+    </a>
+  
+      <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
+      <label for="menu-icon"></label>
+      <nav class="nav"> 		
+        <ul class="pt-5">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Record</a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+
     <audio autoplay loop muted> //per far funzionare l'audio rimuovi muted
       <source src="public/assets/sounds/Dreamcatcher.mp3" type="audio/mp3">
     </audio>
