--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
 
-    <a href="index.html" class="logo" target="_blank">
+    <!-- <a href="index.html" class="logo" target="_blank">
       <img src="public/assets/images/logo.svg" alt="">
     </a>
   
@@ -27,22 +27,22 @@
           <li><a href="#">Record</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-      </nav>
+      </nav> -->
+
 
     <audio autoplay loop muted> //per far funzionare l'audio rimuovi muted
       <source src="public/assets/sounds/Dreamcatcher.mp3" type="audio/mp3">
     </audio>
-    
 
     <script type="module" src="src/Starspace.js"></script>
     
-    <div id="container3D">
+    <!-- <div id="container3D">
       <script type="module" src="src/EarthLoader.js"></script>
     </div>
 
     <div id="spaceShipContainer">
       <script type="module" src="src/SpaceShipLoader.js"></script>
-    </div>
+    </div> -->
 
   </body>
 </html>
