--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <link rel="manifest" href="public/icon/site.webmanifest">
 
     <link rel="stylesheet" type="text/css" href="style/style.css" />
-    <link rel="stylesheet" type="text/css" href="style/navbar_style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="style/navbar_style.css" /> -->
 
   </head>
   <body>
+    <header>
+      <h1>Earth Defender</h1>
+    </header>>
 
     <!-- <a href="index.html" class="logo" target="_blank">
       <img src="public/assets/images/logo.svg" alt="">
