try fix homepage

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
   </head>
   <body>
-    <header>
-      <h1>Earth Defender</h1>
-    </header>>
+
 
     <!-- <a href="index.html" class="logo" target="_blank">
       <img src="public/assets/images/logo.svg" alt="">
@@ -37,7 +35,17 @@
       <source src="public/assets/sounds/Dreamcatcher.mp3" type="audio/mp3">
     </audio>
 
-    <script type="module" src="src/Starspace.js"></script>
+    <!-- <script type="module" src="src/Starspace.js"></script> -->
+    <div id="mainContainer">
+      <!-- <script type="module" src="src/Starspace.js"></script> -->
+          <header>
+      <h1>Earth Defender</h1>
+    </header>
+    </div>
+
+    <!-- <div id="cont">
+      <h2> èroba</h2>
+    </div> -->
     
     <!-- <div id="container3D">
       <script type="module" src="src/EarthLoader.js"></script>
