added points on the game

--- a/src/game.html
+++ b/src/game.html
@@ -18,18 +18,15 @@
         margin: 0px;
         height: 100vh;
         overflow: hidden;
-        background: linear-gradient(
-          0deg,
-          rgb(97, 98, 99) 0%,
-          rgba(0, 0, 0, 0) 100%
-        );
       }
     </style>
   </head>
   <body>
     <!--<h1>Space Invaders</h1>-->
-    <canvas id="game"></canvas>
-    <script type="module" src="game.js"></script>
+    <div>
+      <canvas id="game"></canvas>
+      <script type="module" src="game.js"></script>
+    </div>
     <!--<script type="module" src="../src/starspace.js"></script>-->
   </body>
 </html>
