add h1 with title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset=UTF-8/>
     <title>Earth Defender</title>
-    
+
     <link rel="apple-touch-icon" sizes="180x180" href="public/icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="public/icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="public/icon/favicon-16x16.png">
@@ -19,10 +19,10 @@
     <!-- <a href="index.html" class="logo" target="_blank">
       <img src="public/assets/images/logo.svg" alt="">
     </a>
-  
+
       <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
       <label for="menu-icon"></label>
-      <nav class="nav"> 		
+      <nav class="nav">
         <ul class="pt-5">
           <li><a href="#">Home</a></li>
           <li><a href="#">Record</a></li>
@@ -35,23 +35,25 @@
       <source src="public/assets/sounds/Dreamcatcher.mp3" type="audio/mp3">
     </audio>
 
-    <!-- <script type="module" src="src/Starspace.js"></script> -->
+
     <div id="mainContainer">
-      <!-- <script type="module" src="src/Starspace.js"></script> -->
-          <header>
-      <h1>Earth Defender</h1>
-    </header>
+
+      <script type="module" src="src/Starspace.js"></script>
+
+      <h1>
+        earth defender
+      </h1>
+
+      <div id="container3D">
+        <script type="module" src="src/EarthLoader.js"></script>
+      </div>
     </div>
 
-    <!-- <div id="cont">
-      <h2> èroba</h2>
-    </div> -->
-    
-    <!-- <div id="container3D">
-      <script type="module" src="src/EarthLoader.js"></script>
-    </div>
 
-    <div id="spaceShipContainer">
+
+
+
+    <!-- <div id="spaceShipContainer">
       <script type="module" src="src/SpaceShipLoader.js"></script>
     </div> -->
 
