add text animation

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <script type="module" src="src/Starspace.js"></script>
 
       <h1>
-        earth defender
+        earth defenders
       </h1>
 
       <div id="container3D">
