--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="manifest" href="public/icon/site.webmanifest">
 
     <link rel="stylesheet" type="text/css" href="style/style.css" />
-    <!-- <link rel="stylesheet" type="text/css" href="style/navbar_style.css" /> -->
+    <link rel="stylesheet" type="text/css" href="style/navbar_style.css" /> 
 
   </head>
   <body>
 
-
-    <!-- <a href="index.html" class="logo" target="_blank">
+<!-- 
+    <a href="/index.html" class="logo" target="_blank">
       <img src="public/assets/images/logo.svg" alt="">
     </a>
 
@@ -36,26 +36,25 @@
     </audio>
 
 
+
     <div id="mainContainer">
 
       <script type="module" src="src/Starspace.js"></script>
 
-      <h1>
-        earth defenders
-      </h1>
+      <h1 id="centeredTitle">earth defenders</h1>
 
       <div id="container3D">
         <script type="module" src="src/EarthLoader.js"></script>
       </div>
+      
+      <button class="playbutton" role="button">Play</button>
+
+
+
+      <!-- <div id="spaceShipContainer">
+        <script type="module" src="src/SpaceShipLoader.js"></script>
+      </div> -->
     </div>
-
-
-
-
-
-    <!-- <div id="spaceShipContainer">
-      <script type="module" src="src/SpaceShipLoader.js"></script>
-    </div> -->
 
   </body>
 </html>
