--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
       <source src="public/assets/sounds/Dreamcatcher.mp3" type="audio/mp3">
     </audio>
 
-
+    <!-- <div id="preloader"></div>
+    <script>
+      var loader = document.getElementById("preloader");
+      window.addEventListener("load", function(){
+        setTimeout(function(){
+          loader.style.display = "none";
+        }, 1000);
+      })
+    </script> -->
 
     <div id="mainContainer">
 
@@ -51,9 +59,9 @@
 
 
 
-      <!-- <div id="spaceShipContainer">
+      <div id="spaceShipContainer">
         <script type="module" src="src/SpaceShipLoader.js"></script>
-      </div> -->
+      </div>
     </div>
 
   </body>
