--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
 
-<!-- 
+
     <a href="/index.html" class="logo" target="_blank">
       <img src="public/assets/images/logo.svg" alt="">
     </a>
@@ -28,7 +28,7 @@
           <li><a href="#">Record</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-      </nav> -->
+      </nav>
 
 
     <audio autoplay loop muted> //per far funzionare l'audio rimuovi muted
@@ -59,10 +59,10 @@
 
 
 
-      <div id="spaceShipContainer">
+      <!-- <div id="spaceShipContainer">
         <script type="module" src="src/SpaceShipLoader.js"></script>
       </div>
-    </div>
+    </div> -->
 
   </body>
 </html>
