add spaceship at index

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       <button class="playbutton" role="button">Play</button>
 
 
-      <!-- <div id="spaceShipContainer">
+      <div id="spaceShipContainer">
         <script type="module" src="src/SpaceShipLoader.js"></script>
-      </div> -->
+      </div>
     
     </div>
 
