add earth rotation at hover button

--- a/index.html
+++ b/index.html
@@ -49,16 +49,15 @@
 
       <script type="module" src="src/Starspace.js"></script>
 
-      <h1 id="centeredTitle">earth defenders</h1>
+      <h1 class="centeredTitle">earth defenders</h1>
 
-      <div id="container3D">
+      <div class="earthcont" id="EarthContainer">
         <script type="module" src="src/EarthLoader.js"></script>
       </div>
       
       <button class="playbutton" role="button">Play</button>
 
-
-      <div id="spaceShipContainer">
+      <div class="spaceshipcont" id="spaceShipContainer">
         <script type="module" src="src/SpaceShipLoader.js"></script>
       </div>
     
