upload new images

--- a/src/game.html
+++ b/src/game.html
@@ -19,14 +19,18 @@
         height: 100vh;
         overflow: hidden;
       }
+
+      #game{
+        padding-right: 20px;
+      }
     </style>
   </head>
   <body>
-    <!--<h1>Space Invaders</h1>-->
     <div>
       <canvas id="game"></canvas>
       <script type="module" src="game.js"></script>
     </div>
-    <!--<script type="module" src="../src/starspace.js"></script>-->
+
+    <!-- <script type="module" src="Starspace.js"></script> -->
   </body>
 </html>
