--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <source src="public/assets/sounds/Dreamcatcher.mp3" type="audio/mp3">
     </audio>
 
-    <!-- <div id="preloader"></div>
+    <div id="preloader"></div>
     <script>
       var loader = document.getElementById("preloader");
       window.addEventListener("load", function(){
@@ -44,7 +44,7 @@
           loader.style.display = "none";
         }, 1000);
       })
-    </script> -->
+    </script>
 
     <div id="mainContainer">
 
