--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
   <head>
     <meta charset=UTF-8/>
+
     <title>Earth Defender</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
+
+    
     <link rel="apple-touch-icon" sizes="180x180" href="public/icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="public/icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="public/icon/favicon-16x16.png">
@@ -17,7 +23,7 @@
   <body>
 
 
-    <a href="/index.html" class="logo" target="_blank">
+    <!-- <a href="/index.html" class="logo" target="_blank">
       <img src="public/assets/images/logo.svg" alt="">
     </a>
 
@@ -29,22 +35,24 @@
           <li><a href="#">Record</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-      </nav>
+      </nav> -->
+
+
 
 
     <audio autoplay loop muted> //per far funzionare l'audio rimuovi muted
       <source src="public/assets/sounds/Dreamcatcher.mp3" type="audio/mp3">
     </audio>
 
-    <div id="preloader"></div>
-    <script>
-      var loader = document.getElementById("preloader");
-      window.addEventListener("load", function(){
-        setTimeout(function(){
-          loader.style.display = "none";
-        }, 1000);
-      })
-    </script>
+
+    <div class="spiner-wrapper">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+    <script src="src/spinnerLoader.js"></script>
+
+
 
     <div id="mainContainer">
 
