--- a/index.html
+++ b/index.html
@@ -17,25 +17,50 @@
     <link rel="manifest" href="public/icon/site.webmanifest">
 
     <link rel="stylesheet" type="text/css" href="style/style.css" />
-    <link rel="stylesheet" type="text/css" href="style/navbar_style.css" /> 
+    <link rel="stylesheet" type="text/css" href="style/navbar.css" /> 
 
   </head>
   <body>
 
-
-    <!-- <a href="/index.html" class="logo" target="_blank">
-      <img src="public/assets/images/logo.svg" alt="">
-    </a>
-
-      <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
-      <label for="menu-icon"></label>
-      <nav class="nav">
-        <ul class="pt-5">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Record</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav> -->
+      <nav class="navbar navbar-inverse navbar-dark navbar-expand-lg fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img src="public/assets/images/logo.svg" alt="Logo" width="120" height="" class="d-inline-block align-text-top">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+            <span class="bi bi-list"></span>
+          </button>
+          <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menù</h5>
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Record</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
 
 
 
