--- a/provagltf.html
+++ b/provagltf.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div id="scene3d" style="width: 300px; height: 300px; background: red;">
-
     </div>
     <script type="module">
         import * as THREE from "https://unpkg.com/three@0.136.0/build/three.module.js";
@@ -20,7 +19,7 @@
 
         // CAMERA 
 
-        var camera = new THREE.PerspectiveCamera(45, scene3d.clientWidth / scene3d.clientHeight, 0.1, 100);
+        var camera = new THREE.PerspectiveCamera(45, scene3d.clientWidth / scene3d.clientHeight, 0.1, 1000);
         camera.position.x = 17;
         camera.position.y = 12;
         camera.position.z = 13;
@@ -66,5 +65,8 @@
         renderer.render(scene, camera);
 
     </script>
+
+    <div id="object3d" style="width: 50%; height: 50vh;"></div>
+    <script type="module" src="src/newloader3d.js"></script>
 </body>
 </html>
