end login/signup form

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <img src="public/assets/images/logo.svg" alt="Logo" width="130" height="" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-          <span class="bi bi-list"></span>
+          <span class="bi bi-list "></span>
         </button>
         <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header justify-content-end">
@@ -50,9 +50,9 @@
               </li>
 
 
-              <button type="button" class="btn btn-outline-light"  data-bs-toggle="modal" data-bs-target="#exampleModal"">Accedi</button>
+              <button type="button" class="btn btn-outline-light"  data-bs-toggle="modal" data-bs-target="#loginModal"">Accedi</button>
 
-              <button type="button" class="btn btn-outline-light"  data-bs-toggle="modal" data-bs-target="#exampleModalToggle2"">Registrati</button>
+              <button type="button" class="btn btn-outline-light"  data-bs-toggle="modal" data-bs-target="#signUpModal"">Registrati</button>
               
             </ul>
           </div>
@@ -61,23 +61,25 @@
     </nav>
 
   <!--Modal Login-->
-    <form class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <form class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Accedi</h5>
+            <h1 class="modal-title fs-5" id="loginModalLabel">Accedi</h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body justify-content-center">
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Email</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1">
+            <div class="input-group mb-4 mt-3">
+              <span class="input-group-text" id="usernameLoginAO">@</span>
+              <input type="text" class="form-control" id="usernameLogIn" placeholder="Username" aria-label="Username" aria-describedby="usernameLoginAO">
             </div>
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Password</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1">
-            </div>    
-            <button type="button" class="btn btn-accedi">Accedi</button>
+
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="passwordLoginAO"><i class="bi bi-key"></i></span>
+              <input type="password" class="form-control" id="passwordLogIn" placeholder="Password" aria-label="Password" aria-describedby="passwordLoginAO">
+            </div>
+
+            <button type="submit" class="btn btn-login">Accedi</button>
             <!-- <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Ricordami</label>
@@ -85,7 +87,7 @@
           </div>
           <div class="modal-footer justify-content-center">
             <div class="text-center">
-              <p>Non hai un account? <a id="registeranchor" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Registati</a></p>
+              <p>Non hai un account? <a id="registeranchor" data-bs-target="#signUpModal" data-bs-toggle="modal">Registati</a></p>
             </div>
           </div>
         </div>
@@ -93,28 +95,49 @@
     </form>
   
     <!--Modal Sign up-->
-    <form class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+    <form class="modal fade" id="signUpModal" aria-hidden="true" aria-labelledby="signUpModalLabel" tabindex="-1">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Registati</h1>
+            <h1 class="modal-title fs-5" id="signUpModalLabel">Registrati</h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <div class="row mb-3">
-              <div class="col-sm-6">
-                <label for="signupNome" class="form-label">Nome</label>
-                <input type="email" class="form-control" id="signupNome">
+            <div class="row mb-3 mt-2">
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">@</span>
+                <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
               </div>
-              <div class="col-sm-6">
-                <label for="signupCognome" class="form-label">Cognome</label>
-                <input type="text" class="form-control" id="signupCognome">
-              </div>
-            </div>
 
-          </div>
+              <div class="col-sm-6 mb-3">
+                <input type="text" class="form-control" id="nameSignUpForm" placeholder="Nome">
+              </div>
+              
+              <div class="col-sm-6 mb-3">
+                <input type="text" class="form-control" id="surnameSignUpForm" placeholder="Cognome">
+              </div>
+
+              <div class="mb-3">
+                <input type="email" class="form-control" id="emailSignUpForm" placeholder="Email">
+              </div>
+
+              <div class="mb-3">
+                <input type="password" class="form-control" id="passwordSignUpForm" placeholder="Password">
+              </div>
+
+              <div class="mb-3">
+                <input type="password" class="form-control" id="confirmPasswordSignUpForm" placeholder="Conferma Password">
+              </div>
+              <div class="mb-2 mt-1">
+                <button type="submit" class="btn btn-register">Registati</button>
+              </div>
+
+              </div>
+              </div>
           <div class="modal-footer justify-content-center">
-            <button class="btn btn-outline-success" data-bs-target="#exampleModal" data-bs-toggle="modal">Registrati</button>
+            <div class="text-center">
+              <p>Sei già registrato? <a id="registeranchor" data-bs-target="#loginModal" data-bs-toggle="modal">Accedi</a></p>
+            </div>
           </div>
         </div>
       </div>
