--- a/src/game.html
+++ b/src/game.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Space Invaders</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <title>Earth Defender - Play</title>
     <link rel="shortcut icon" href="#" />
     <style>
       html {
@@ -17,16 +19,48 @@
         padding: 0px;
         margin: 0px;
         height: 100vh;
+        width: 100vw;
         overflow: hidden;
       }
 
       #game{
         padding-right: 0px;
       }
+      .infoGame{
+        margin-top: 0px;
+        margin-left: 0px;
+        width: 100%;
+        background: black;
+        color: white;
+      }
     </style>
   </head>
   <body>
-    <div>
+    <div class="container-fluid" style="padding: 0;">
+      <div class="infoGame text-center">
+        <div class="row">
+          <div class="col-2">
+            Close Button
+          </div>
+          <div class="col">
+            <p>Livello: <span class="levelSpan" id="levelSpanID">1</span></p>
+          </div>
+          <div class="col">
+            <p>Punteggio: <span class="scoreSpan" id="scoreSpanID">0</span></p>
+          </div>
+          <div class="col">
+            Vite
+          </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <h3>Power up</h3>
+        </div>
+        <div class="col">
+          Life Enemy
+        </div>
+      </div>
       <canvas id="game"></canvas>
       <script type="module" src="game.js"></script>
     </div>
