--- a/src/game.html
+++ b/src/game.html
@@ -49,7 +49,11 @@
             <p>Punteggio: <span class="scoreSpan" id="scoreSpanID">0</span></p>
           </div>
           <div class="col">
-            Vite
+            Vite:
+              <img id="heart1" src="../public/assets/images/pixel_heart.png" width="20px" height="20px">
+              <img id="heart2" src="../public/assets/images/pixel_heart.png" width="20px" height="20px">
+              <img id="heart3" src="../public/assets/images/pixel_heart.png" width="20px" height="20px">
+            </span>
           </div>
       </div>
 
@@ -58,10 +62,17 @@
           <h3>Power up</h3>
         </div>
         <div class="col">
-          Life Enemy
+          Enemy Life:
+          <img id="enemy1" src="../public/assets/images/penemy1.png" width="20px" height="20px">
+          <span class="lifeSpan1" id="lifeSpan1ID"></span>
+          <img id="enemy2" src="../public/assets/images/penemy2.png" width="20px" height="20px">
+          <span class="lifeSpan2" id="lifeSpan2ID"></span>
+          <img id="enemy3" src="../public/assets/images/penemy3.png" width="20px" height="20px">
+          <span class="lifeSpan3" id="lifeSpan3ID"></span>
         </div>
       </div>
-      <canvas id="game"></canvas>
+      <canvas id="game">
+      </canvas>
       <script type="module" src="game.js"></script>
     </div>
 
