--- a/src/game.html
+++ b/src/game.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <title>Earth Defender - Play</title>
     <link rel="shortcut icon" href="#" />
     <style>
@@ -40,7 +42,7 @@
       <div class="infoGame text-center">
         <div class="row">
           <div class="col-2">
-            Close Button
+            <ion-icon name="arrow-back-circle-outline"></ion-icon>
           </div>
           <div class="col">
             <p>Livello: <span class="levelSpan" id="levelSpanID">1</span></p>
@@ -49,17 +51,17 @@
             <p>Punteggio: <span class="scoreSpan" id="scoreSpanID">0</span></p>
           </div>
           <div class="col">
-            Vite:
-              <img id="heart1" src="../public/assets/images/pixel_heart.png" width="20px" height="20px">
-              <img id="heart2" src="../public/assets/images/pixel_heart.png" width="20px" height="20px">
-              <img id="heart3" src="../public/assets/images/pixel_heart.png" width="20px" height="20px">
-            </span>
+            <p>Record: <span class="recordSpan" id="recordSpanID">0</span></p>
           </div>
       </div>
 
       <div class="row">
         <div class="col">
-          <h3>Power up</h3>
+          Vite:
+            <img id="heart1" src="../public/assets/images/pixel_heart.png" width="20px" height="20px">
+            <img id="heart2" src="../public/assets/images/pixel_heart.png" width="20px" height="20px">
+            <img id="heart3" src="../public/assets/images/pixel_heart.png" width="20px" height="20px">
+          </span>
         </div>
         <div class="col">
           Enemy Life:
