fix home page responsive

--- a/index.html
+++ b/index.html
@@ -158,22 +158,22 @@
     <script src="src/spinnerLoader.js"></script>
 
 
-    <div id="mainContainer">
+
+    <div id="mainContain">
 
       <script type="module" src="src/Starspace.js"></script>
 
-      <h1 class="centeredTitle">earth defenders</h1>
+      <div class="spaceshipContainer" id="spaceshipContainerID"></div>
 
-      <div class="earthcont" id="EarthContainer">
+      <div class = "titlebuttonContainer">
+        <h1 class="centeredTitle">earth defenders</h1>
+        <button class="playbutton" role="button">Play</button>
       </div>
-      
-      <button class="playbutton" role="button">Play</button>
 
-      <div class="spaceshipcont" id="spaceShipContainer">
-      </div>
+      <div class = "earthContainer" id="earthContainerID"></div>
 
       <script type="module" src="src/Loader3d.js"></script>
-    
+
     </div>
   </body>
 
