--- a/src/game.html
+++ b/src/game.html
@@ -10,32 +10,8 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <title>Earth Defender - Play</title>
     <link rel="shortcut icon" href="#" />
-    <style>
-      html {
-        overflow: hidden;
-      }
-      body {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        padding: 0px;
-        margin: 0px;
-        height: 100vh;
-        width: 100vw;
-        overflow: hidden;
-      }
+    <link rel="stylesheet" href="../style/game.css"/>
 
-      #game{
-        padding-right: 0px;
-      }
-      .infoGame{
-        margin-top: 0px;
-        margin-left: 0px;
-        width: 100%;
-        background: black;
-        color: white;
-      }
-    </style>
   </head>
   <body>
     <div class="container-fluid" style="padding: 0;">
