add resgiter form validatore

--- a/index.html
+++ b/index.html
@@ -110,31 +110,31 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <form action="">
+            <form action="" id="registerForm">
               <div class="row mb-3 mt-2">
                 <div class="input-group mb-3">
                   <span class="input-group-text" id="basic-addon1">@</span>
-                  <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" required>
+                  <input type="text" name="usernamesignup" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" required>
                 </div>
 
                 <div class="col-sm-6 mb-3">
-                  <input type="text" class="form-control" id="nameSignUpForm" placeholder="Nome" required>
+                  <input type="text" name="namesignup" class="form-control" id="nameSignUpForm" placeholder="Nome" required>
                 </div>
                 
                 <div class="col-sm-6 mb-3">
-                  <input type="text" class="form-control" id="surnameSignUpForm" placeholder="Cognome" required>
+                  <input type="text" name="surnamesignup" class="form-control" id="surnameSignUpForm" placeholder="Cognome" required>
                 </div>
 
                 <div class="mb-3">
-                  <input type="email" class="form-control" id="emailSignUpForm" placeholder="Email" required>
+                  <input type="email" name="emailsignup" class="form-control" id="emailSignUpForm" placeholder="Email" required>
                 </div>
 
                 <div class="mb-3">
-                  <input type="password" class="form-control" id="passwordSignUpForm" placeholder="Password" required>
+                  <input type="password" name="passwordsignup" class="form-control" id="passwordSignUpForm" placeholder="Password" required>
                 </div>
 
                 <div class="mb-3">
-                  <input type="password" class="form-control" id="confirmPasswordSignUpForm" placeholder="Conferma Password" required>
+                  <input type="password" name="confirmsignup" class="form-control" id="confirmPasswordSignUpForm" placeholder="Conferma Password" required>
                 </div>
                 
                 <div class="mb-2 mt-1">
