fix form validation

--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                 </div>
 
                 <div class="mb-3">
-                  <input type="password" name="passwordsignup" class="form-control" id="passwordSignUpForm" placeholder="Password" required>
+                  <input type="password" name="passwordsignup" class="form-control" id="passwordsignup" placeholder="Password" required>
                 </div>
 
                 <div class="mb-3">
-                  <input type="password" name="confirmsignup" class="form-control" id="confirmPasswordSignUpForm" placeholder="Conferma Password" required>
+                  <input type="password" name="confirmpasswordsignup" class="form-control" id="confirmpasswordsignup" placeholder="Conferma Password" required>
                 </div>
                 
                 <div class="mb-2 mt-1">
