--- a/src/game.html
+++ b/src/game.html
@@ -49,9 +49,11 @@
           <span class="lifeSpan3" id="lifeSpan3ID"></span>
         </div>
       </div>
-      <canvas id="game">
-      </canvas>
-      <script type="module" src="game.js"></script>
+      <div class="canvas-container">
+        <canvas id="game"></canvas>
+        <button class="mirino"></button>
+        <script type="module" src="game.js"></script>
+      </div>
     </div>
 
     <!-- <script type="module" src="Starspace.js"></script> -->
