--- a/src/html/regolamento.html
+++ b/src/html/regolamento.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Earth Defenders - Record</title>
+    <title>Earth Defenders - Regolamento</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" type="text/css" href="../../style/navbar.css" /> 
+
     <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../style/navbar.css" /> 
 </head>
-<body>
+<body style="background: red;">
       <div id="navigationbar"></div>
       <script> 
         $(function(){
           $("#navigationbar").load("navbar.html"); 
         });
         </script> 
-        
-          <div id="mainContain">
-            <script type="module" src="../Starspace.js"></script>
-          </div>
+    
 </body>
 </html>
