--- a/src/html/regolamento.html
+++ b/src/html/regolamento.html
@@ -12,13 +12,17 @@
     <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
 </head>
-<body style="background: red;">
-      <div id="navigationbar"></div>
-      <script> 
-        $(function(){
-          $("#navigationbar").load("navbar.html"); 
-        });
-        </script> 
+<body>
+  <div id="navigationbar"></div>
+  <script> 
+    $(function(){
+      $("#navigationbar").load("navbar.html"); 
+    });
+  </script> 
+
+  <div id="mainContain">
+    <script type="module" src="../Starspace.js"></script>
+  </div>
     
 </body>
 </html>
