try add record's table

--- a/src/html/record.html
+++ b/src/html/record.html
@@ -20,8 +20,42 @@
         });
         </script> 
         
-          <div id="mainContain">
+        <div id="mainContain">
             <script type="module" src="../Starspace.js"></script>
+            <div class="justify-content-center" id="tablecontainer" style="display: flex; z-index: 100; width: 70%; height: 200px; position: fixed; align-items: center; left: 15%; top: 30%;">
+              <table class="table" style="color: white;">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td colspan="2">Larry the Bird</td>
+                    <td>@twitter</td>
+                  </tr>
+                </tbody>
+              </table>
           </div>
+
+        </div>
+
+
 </body>
 </html>
