add record page

--- a/src/html/record.html
+++ b/src/html/record.html
@@ -10,7 +10,8 @@
 
     <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../style/navbar.css" /> 
+    <link rel="stylesheet" type="text/css" href="../../style/navbar.css" />
+    <link rel="stylesheet" type="text/css" href="../../style/record.css" />
 </head>
 <body>
       <div id="navigationbar"></div>
@@ -20,36 +21,73 @@
         });
         </script> 
         
-        <div id="mainContain">
+        <div id="mainContain" class="containAll">
             <script type="module" src="../Starspace.js"></script>
-            <div class="justify-content-center" id="tablecontainer" style="display: flex; z-index: 100; width: 70%; height: 200px; position: fixed; align-items: center; left: 15%; top: 30%;">
-              <table class="table" style="color: white;">
+            <div class="recordtablecontainer" id="tablecontainerID">
+              <table class="table">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
+                    <th scope="col">Username</th>
+                    <th scope="col">Record</th>
+                    <th scope="col">Data</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                   </tr>
                   <tr>
                     <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                   </tr>
                   <tr>
                     <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                   </tr>
+                  <th scope="row">4</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <th scope="row">5</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <th scope="row">6</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <th scope="row">7</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <th scope="row">8</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <th scope="row">9</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <th scope="row">10</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+
                 </tbody>
               </table>
           </div>
