fix record page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       $(function(){
         $("#navigationbar").load("src/html/navbar.html"); 
       });
-      </script> 
+    </script> 
 
 
     <audio autoplay loop muted> //per far funzionare l'audio rimuovi muted
@@ -51,7 +51,7 @@
 
 
 
-    <div id="mainContain">
+    <div id="mainContain" class="homecontainer">
 
       <div class="spaceshipContainer" id="spaceshipContainerID"></div>
 
