--- a/src/html/record.html
+++ b/src/html/record.html
@@ -5,15 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Earth Defenders - Record</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="../../public/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../public/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../public/icon/favicon-16x16.png">
+    <link rel="manifest" href="../../public/icon/site.webmanifest">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
     <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../../style/navbar.css" />
-    <link rel="stylesheet" type="text/css" href="../../style/record.css" />
+    <link rel="stylesheet" type="text/css" href="../../style/style.css" />
+    <link rel="stylesheet" type="text/css" href="../../style/spinner.css" />
+
   </head>
   <body>
+    <div class="spiner-wrapper">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+    <script src="../spinnerLoader.js"></script>
+
+
     <div id="navigationbar"></div>
       <script> 
         $(function(){
@@ -26,7 +42,7 @@
       <script type="module" src="../Starspace.js"></script>
 
       <h1 class="pagetitle">🌏 Record</h1>
-      
+
       <div class="recordtablecontainer" id="tablecontainerID">
         <table class="table">
           <thead>
