some fix general

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </script> 
 
 
-    <audio autoplay loop muted> //per far funzionare l'audio rimuovi muted
+    <audio autoplay loop muted>
       <source src="public/assets/sounds/Dreamcatcher.mp3" type="audio/mp3">
     </audio>
 
