add new cursor animation

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     <script src="src/spinnerLoader.js"></script>
 
 
+    <div class="cursor">
+    </div>
+    <script src="src/cursor.js"></script>
 
     <div id="mainContain" class="homecontainer">
 
