--- a/src/html/regolamento.html
+++ b/src/html/regolamento.html
@@ -33,12 +33,12 @@
     $(function(){
       $("#navigationbar").load("navbar.html"); 
     });
-  </script> 
+  </script>
 
   <div id="mainContain" class="containAll">
     <script type="module" src="../Starspace.js"></script>
 
-    <h1 class="pagetitle">📖 Regolamento</h1>
+    <h1 class="pagetitle">Regolamento</h1>
     <div class="container text-center">
       <div class="row">
         <div class="col">
