--- a/src/html/record.html
+++ b/src/html/record.html
@@ -38,6 +38,14 @@
       </script> 
     
 
+    <audio id="songID" autoplay loop>
+      <source src="../../public/assets/sounds/Dreamcatcher.mp3" type="audio/mp3">
+    </audio>
+    <script>
+      var audio = document.getElementById("songID");
+      audio.volume = 0.01;
+    </script>
+
     <div id="mainContain" class="containAll">
       
       <script type="module" src="../Starspace.js"></script>
