--- a/src/html/regolamento.html
+++ b/src/html/regolamento.html
@@ -35,31 +35,17 @@
     });
   </script>
 
+  <audio id="songID" autoplay loop>
+    <source src="../../public/assets/sounds/Dreamcatcher.mp3" type="audio/mp3">
+  </audio>
+  <script>
+    var audio = document.getElementById("songID");
+    audio.volume = 0.01;
+  </script>
+
   <div id="mainContain" class="containAll">
     <script type="module" src="../Starspace.js"></script>
-
     <h1 class="pagetitle">Regolamento</h1>
-    <div class="container text-center">
-      <div class="row">
-        <div class="col">
-          1 of 2
-        </div>
-        <div class="col">
-          2 of 2
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          1 of 3
-        </div>
-        <div class="col">
-          2 of 3
-        </div>
-        <div class="col">
-          3 of 3
-        </div>
-      </div>
-    </div>
   </div>
     
 </body>
