--- a/src/game.html
+++ b/src/game.html
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <title>Earth Defender - Play</title>
     <link rel="shortcut icon" href="#" />
     <link rel="stylesheet" href="../style/game.css"/>
@@ -19,7 +18,7 @@
       <div class="infoGame text-center">
         <div class="row">
           <div class="col-2">
-            <ion-icon name="arrow-back-circle-outline"></ion-icon>
+            <button type="button" class="btn btn-danger" id="backButton"> Back </button>
           </div>
           <div class="col">
             <p>Livello: <span class="levelSpan" id="levelSpanID">1</span></p>
@@ -28,7 +27,7 @@
             <p>Punteggio: <span class="scoreSpan" id="scoreSpanID">0</span></p>
           </div>
           <div class="col">
-            <p>Record: <span class="recordSpan" id="recordSpanID">0</span></p>
+            <button type="button" class="btn btn-danger" id="pauseButton"> Pause </button>
           </div>
       </div>
 
@@ -50,10 +49,14 @@
           <span class="lifeSpan3" id="lifeSpan3ID"></span>
         </div>
       </div>
-      <div class="canvas-container">
+      </div>
         <canvas id="game"></canvas>
-        <button class="mirino"></button>
         <script type="module" src="game.js"></script>
+        <!-- Game Over -->
+        <div class="gameOver" id="gameOverID" style="visibility: hidden;">
+          <h1>Game Over</h1>
+          <button type="button" class="btn btn-danger" id="restartButton" style="visibility: hidden;"> Restart </button>
+        </div>
       </div>
     </div>
 
