fix path php file in navabr

--- a/src/html/navbar.html
+++ b/src/html/navbar.html
@@ -78,7 +78,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body">
-        <form id="registerForm" method="POST" action="src/php/contact.php">
+        <form id="registerForm" method="POST" action="../../src/php/contact.php">
         <div class="row mb-3 mt-2">
             <div class="input-group mb-3">
             <span class="input-group-text" id="basic-addon1">@</span>
