--- a/src/html/navbar.html
+++ b/src/html/navbar.html
@@ -121,6 +121,6 @@
 </div>
 </div>
 
-<script src="../../src/formValidation.js"></script>
+<script src="../../src/javascript/formValidation.js"></script>
 
-<script src="../../src/activeElement.js">
+<script src="../../src/javascript/activeElement.js"></script>
